# aoc2022

./: .env.example  .gitignore  Cargo.toml  README.md
.cargo/: config
.github/workflows/: check.yml  clippy.yml  tests.yml
src/: helpers.rs  lib.rs  main.rs
