[package]
name = "aoc"
version = "0.2.0"
edition = "2021"
authors = ["Matej Janežič <janezic.mj@gmail.com>"]
default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# framework
dotenv = "0.15.0"
hashbrown = "0.13.1"
hex-literal = "0.3.4"
itertools = "0.10.5"
lazy_static = "1.4.0"
pico-args = "0.5.0"
regex = "1.7.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
elves = { git = "https://github.com/janezicmatej/elves", branch = "develop" }
